# FrankStore

./: .gitignore  README.md
Program/: .gitignore  CMakeLists.txt  Converter.cpp  Converter.h  CoverImage.cpp  CoverImage.h  CoverPixel.cpp  CoverPixel.h  FileToDecode.cpp  FileToDecode.h  FileToEncode.cpp  FileToEncode.h  FileToOutput.cpp  FileToOutput.h  FrankDecode.cpp  FrankDecode.h  FrankEncode.cpp  FrankEncode.h  FrankGenerator.cpp  FrankGenerator.h  FranksImage.h  Image.h  ImageToOutput.cpp  ImageToOutput.h  ImageToRead.cpp  main.cpp  project.rc  sha512.h
Program/header_files/: ConsoleController.h  Converter.h  CoverImage.h  CoverPixel.h  EncryptManager.h  ExifManager.h  ExifManager.hpp  FileToDecode.h  FileToEncode.h  FileToOutput.h  FrankDecode.h  FrankEncode.h  FrankEncrypt.h  FrankGenerator.h  ImageToOutput.h  ImageToRead.h
Program/object_files/: ConsoleController.cpp  Converter.cpp  CoverImage.cpp  CoverPixel.cpp  EncryptManager.cpp  ExifManager.cpp  FileToDecode.cpp  FileToEncode.cpp  FileToOutput.cpp  FrankDecode.cpp  FrankEncode.cpp  FrankEncrypt.cpp  FrankGenerator.cpp  ImageToOutput.cpp  ImageToRead.cpp  sha512.cpp
UI/: CMakeLists.txt  main.cpp  project.rc  resource.xml
UI/designs/: LoadingScreen.cpp  LoadingScreen.h  application.css  file_chooser.glade  loading_screen.glade  loading_screen.glade~  main_screen.glade
UI/header_files/: FileChooser.h  FrankThreader.h  LoadingScreen.h  MainScreen.h  StaticFunctions.h
UI/object_files/: FileChooser.cpp  FrankThreader.cpp  LoadingScreen.cpp  MainScreen.cpp  StaticFunctions.cpp  helloworld.cpp
docs/: CLI.rst  GUI.rst  conf.py  index.rst
